force-app/main/default/objects/DmlOperation__c/DmlOperation__c.object-meta.xml
<CustomObject>
    <description>Records of DML operations for objects where tracking is enabled</description>
    <label>DML Operation</label>
    <nameField>
        <displayFormat>DO-{00000000}</displayFormat>
        <label>DML Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DML Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>