force-app/main/default/objects/DmlOperation__c/fields/NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRecords__c</fullName>
    <label>Num Records</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>