force-app/main/default/objects/DmlOperation__c/fields/SobjectName__c.field-meta.xml
<CustomField>
    <fullName>SobjectName__c</fullName>
    <description>The full API name of the Salesforce object</description>
    <inlineHelpText>The full API name of the Salesforce object</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>