force-app/main/default/objects/DmlOperation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>insert</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>